Added images, finished data persistence section of lab

--- a/Lab3/Lab3/Places.plist
+++ b/Lab3/Lab3/Places.plist
@@ -13,7 +13,7 @@
 		<string>Roser ATLAS</string>
 		<string>Engineering Center</string>
 		<string>Mathematics</string>
-	<array/>
+	</array>
 	<key>Libraries</key>
 	<array>
 		<string>Norlin Library</string>
