--- a/ProjectOne/ProjectOne/catData.plist
+++ b/ProjectOne/ProjectOne/catData.plist
@@ -20,7 +20,7 @@
 		<string>Purebred</string>
 		<string>6 months</string>
 	</array>
-	<key>Mocha</key>
+	<key>Meow</key>
 	<array>
 		<string>Adopt Me</string>
 		<string>&lt;image&gt;</string>
