--- a/ProjectOne/ProjectOne/dogData.plist
+++ b/ProjectOne/ProjectOne/dogData.plist
@@ -24,7 +24,7 @@
 		<string>Female</string>
 		<string>Lab</string>
 		<string>Mix</string>
-		<string>3 years</string>
+		<string>4 months</string>
 	</array>
 </dict>
 </plist>
