--- a/Project3/app/src/main/AndroidManifest.xml
+++ b/Project3/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="BlueLight"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -27,7 +27,10 @@
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme"
+            android:label=""
+
             android:screenOrientation="portrait">
+            <item android:name="android:itemTextAppearance">@style/myCustomMenuTextApearance</item>
 
         </activity>
     </application>
