--- a/Project3/app/src/main/AndroidManifest.xml
+++ b/Project3/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 
     <!--USER PERMISSIONS-->
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>-->
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
 </manifest>
