--- a/Project3/app/build.gradle
+++ b/Project3/app/build.gradle
@@ -4,6 +4,13 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
+
+
     defaultConfig {
         applicationId "jessie.project3"
         minSdkVersion 17
@@ -24,5 +31,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 
 }
