fixed broken stuf

--- a/Jessie_Albarian_Final/app/src/main/AndroidManifest.xml
+++ b/Jessie_Albarian_Final/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".WorkoutActivity"
-            android:parentActivityName=".WorkoutCategoryActivity"/>
+            android:parentActivityName=".MainActivity"/>
 
         <activity android:name=".SignupActivitiy"
             android:parentActivityName=".MainActivity" />
